--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mobx-utils": "6.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "regenerator-runtime": "^0.13.11",
     "swc-loader": "0.2.3",
     "ts-loader": "8.4.0",
     "typescript": "4.7.4",
